# Footprint-Accelerator

./: .gitignore  CMakeLists.txt  package.xml
include/soft2_vo/: optimize_module.hpp  soft2_node.hpp
launch/: soft2_vo_launch.py
src/: .soft2_node.cpp.swp  optimize_module.cpp  soft2_node.cpp
